编写测试代码，修复测试当中的一些bug

--- a/examples/demo/chat/front/web/index.html
+++ b/examples/demo/chat/front/web/index.html
@@ -62,7 +62,8 @@
         console.log("initialized");
         starx.on("onNewUser", onNewUser);
         starx.on("onMembers", onMembers);
-        starx.request("room.join", {}, join);
+        // starx.request("baseapp.room.join", {}, join);
+        starx.request("baseapp.account.join", {}, join);
     })
 </script>
 </body>
